--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,22 @@ dev_dependencies:
   provider: 6.0.3
   shared_preferences: ^2.0.15
   pinput: 1.2.0
-  firebase_core: ^1.17.1
-  firebase_messaging: ^11.2.12
+  mask_text_input_formatter: ^1.2.1
+  progress_dialog: ^1.2.4
+  firebase_core: ^2.2.0
+  firebase_messaging: ^14.1.0
   firebase_auth: any
-  cloud_firestore: ^3.1.8
+  cloud_firestore: ^4.0.5
+  beamer: ^1.5.3
+  device_info_plus: ^4.1.2
+  crypto: ^3.0.2
+  multi_image_picker: ^4.7.15
+  cached_network_image: ^2.5.1
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.5
+  flutter_rounded_progress_bar: ^0.2.0
+  permission_handler: ^10.2.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
